--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -23,6 +23,7 @@ header {
       padding-top: 70px;
       gap: 57px;
       font-size: 24px;
+      font-weight: 500;
       list-style-type: none;
       margin-right: 100px;
     }
