--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: center;
   border-radius: 25px;
+  margin: 10px 100px 10px 100px;
 }
+
 .overlay {
   position: absolute;
   /*top: 10%;*/
