--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -5,7 +5,7 @@ footer {
   height: 209px;
   background-color: black;
   margin-top: 50px;
-  width: 100%;
+  /*width: 100%;*/
   p {
     color: white;
     text-align: center;
