--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -1,7 +1,22 @@
 .Card {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   background-color: #f6f6f6;
   border-radius: 25px;
   margin-left: 100px;
-  width: 100%;
-  height: 829px;
+  /*width: 100%;
+  height: 829px;*/
+}
+.ContainerCard {
+  width: 340px;
+  height: 340px;
+  /*background-color: #ff6060;*/
+  background: linear-gradient(180deg, #ff6060, black);
+  opacity: 0.8;
+  border-radius: 10px;
+}
+.TitreAppart {
+  font-size: 18px;
+  color: white;
 }
