Début menu accordéon

--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -15,7 +15,7 @@
   color: #c01b1b; // Couleur du texte
   font-weight: medium;
   font-size: 28px;
-  /*width: 100%;*/
+  /*width: 1240px;*/
 }
 img {
   width: 100%;
