--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -1,13 +1,18 @@
 .Card {
+  margin: 50px 60px 50px 60px;
+}
+.Card .TitreAppart img h1 {
   display: flex;
-  flex-direction: row;
+  /*flex-direction: row;
   flex-wrap: wrap;
-  background-color: #f6f6f6;
+  /*background-color: #b51717;*/
   border-radius: 25px;
-  margin-left: 100px;
+  /*margin-left: 100px;*/
+  font-size: 18px;
   /*width: 100%;
   height: 829px;*/
 }
+
 .ContainerCard {
   width: 340px;
   height: 340px;
@@ -17,6 +22,9 @@
   border-radius: 10px;
 }
 .TitreAppart {
-  font-size: 18px;
+  align-items: flex-end;
   color: white;
 }
+/*h1 {
+  font-size: 18px;
+}*/
