--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -9,8 +9,9 @@ header {
     align-items: center;
     height: 68px;
     width: 210px;
-    margin-top: 45px;
-    margin-bottom: 45px;
+    margin: 45px 100px 45px 100px;
+    /*margin-top: 45px;
+    margin-bottom: 45px;*/
     padding-top: 30px;
     padding-bottom: 30px;
   }
