--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -5,7 +5,7 @@
 .NoMatch {
   display: block;
   font-size: 288px;
-  margin-block-start: 0.67em;
+  margin-block-start: 139px;
   margin-block-end: 139px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
@@ -16,8 +16,8 @@
   display: block;
   font-size: 36px;
   font-weight: 600px;
-  margin-block-start: 36px;
-  margin-block-end: 1em;
+  /* margin-block-start: 36px;*/
+  margin-block-end: 139px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
