--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -5,13 +5,16 @@ footer {
   height: 209px;
   background-color: black;
   margin-top: 50px;
-  /*width: 100%;*/
+  width: 100%;
+
   p {
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
+    font-size: 24px;
   }
   .kasa-logo-blanc {
     object-fit: none;
     margin: auto;
+    height: 100px;
   }
 }
