--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -1,8 +1,10 @@
 .Appart {
-  background-color: aquamarine;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  background-color: #f6f6f6;
   margin: 50px 100px 50px 100px;
-  /* margin-top: 50px;
-  margin-left: 100px;
-  margin-right: 100px;*/
+  padding-top: 50px;
   border-radius: 25px;
+  width: 1240px;
 }
