Début intégration page FicheLogement

--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -19,14 +19,14 @@ header {
   nav {
     ul {
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
       padding-right: 40px;
       padding-top: 70px;
       gap: 57px;
       font-size: 24px;
       font-weight: 500;
       list-style-type: none;
-      margin-right: 100px;
+      margin-right: 350px;
     }
     li {
       align-items: center;
