--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -36,8 +36,8 @@ header {
       color: #60ff95;
     }
     .nav-link {
+      text-decoration: none;
       color: #ff6060;
     }
   }
 }
-/* focus ou visited pour que le lien reste lorsque l'UI a cliqué sur une page ?*/
