intégration page FicheLogement mais scss Banner qui a bougé !

--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -33,7 +33,7 @@ header {
     }
     .nav-link.active {
       text-decoration: underline;
-      color: #60ff95;
+      color: #ff6060;
     }
     .nav-link {
       text-decoration: none;
