--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -12,6 +12,7 @@
   border-radius: 25px;
   /*margin-left: 100px;*/
   font-size: 18px;
+  color: greenyellow;
   /*width: 100%;
   height: 829px;*/
 }
@@ -21,9 +22,9 @@
 .ContainerCard {
   width: 340px;
   height: 340px;
-  /*background-color: #ff6060;*/
+  background-color: #ff6060;
   background: linear-gradient(180deg, #ff6060, black);
-  opacity: 0.8;
+  // opacity: 0.8;
   border-radius: 10px;
 }
 .TitreAppart {
