--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -14,12 +14,17 @@
   height: 54px;
   border-radius: 5px;
 }
-
 .CollapseContent {
   padding: 10px;
-  width: 1023px;
+  // width: 1023px;
+  background-color: #f6f6f6;
 }
 h2 {
   font-size: 24px;
   color: white;
+}
+.Arrow {
+  font-size: 30px;
+  color: white;
+  font-weight: bold;
 }
