correction scss et suite intégration FicheLogement avec composant Tag et menu "accordéon"

--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -12,12 +12,13 @@
   background-color: #ff6060;
   width: 1023px;
   height: 54px;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 .CollapseContent {
   padding: 10px;
   // width: 1023px;
   background-color: #f6f6f6;
+  list-style-type: circle;
 }
 h2 {
   font-size: 24px;
