--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 25px;
-  margin: 10px 100px 10px 100px;
+  margin: 10px 0 10px 0;
 
   .overlay {
     position: absolute;
@@ -23,6 +23,6 @@
     object-fit: cover;
     border-radius: 25px;
     max-height: 223px; // Hauteur maximale
-    margin: 10px 100px 10px 100px;
+    margin: 10px 0 10px 0;
   }
 }
