--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -12,18 +12,27 @@
   border-radius: 25px;
   /*margin-left: 100px;*/
   font-size: 18px;
-  color: greenyellow;
+  color: white;
+  font-weight: bold;
+
   /*width: 100%;
   height: 829px;*/
 }
-.Card h1 {
+.Appart a {
+  // padding-left: 10px;
+  text-decoration: none;
+}
+.TitreAppart h1 {
+  margin: 0;
+  position: relative;
+  top: -50px;
   padding-left: 10px;
 }
 .ContainerCard {
   width: 340px;
   height: 340px;
-  background-color: #ff6060;
-  background: linear-gradient(180deg, #ff6060, black);
+  // background-color: #ff6060;
+  // background: linear-gradient(180deg, #ff6060, black);
   // opacity: 0.8;
   border-radius: 10px;
 }
@@ -33,7 +42,7 @@
 }
 .CardImage {
   width: 100%;
-  height: 250px;
+  height: 340px;
   margin: auto;
   border-radius: 10px;
 }
