--- a/kasa/src/components/Slideshow/Slideshow.scss
+++ b/kasa/src/components/Slideshow/Slideshow.scss
@@ -6,7 +6,7 @@
   max-width: 100%;
 
   button {
-    // position: absolute;
+    position: absolute;
     /* top: 50%; */
     /* left: 40px; */
     border: none;
@@ -14,16 +14,25 @@
     cursor: pointer;
     font-size: 100px;
     color: greenyellow;
-    // transform: translateX(290px);
+    transform: translateY(-50%);
     // padding: 10px;
   }
-  button:first-child {
-    left: 270px;
+  .prev {
+    left: 400px;
+    bottom: 80px;
   }
 
-  button:last-child {
-    right: 10px;
+  .next {
+    right: 400px;
+    bottom: 80px;
   }
+  // button:first-child {
+  //   left: 270px;
+  // }
+
+  // button:last-child {
+  //   right: 10px;
+  // }
   img {
     // max-width: 100%;
     height: 415px;
