--- a/kasa/src/views/FicheLogement/FicheLogement.scss
+++ b/kasa/src/views/FicheLogement/FicheLogement.scss
@@ -27,7 +27,10 @@ section {
     font-size: 18px;
     color: #ff6060;
   }
-
+  .Host {
+    width: 83px;
+    padding-top: 10px;
+  }
   .HostGlobal {
     display: flex;
     justify-content: flex-end;
