--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -6,12 +6,15 @@
   display: block;
   font-size: 288px;
   margin-block-start: 139px;
-  margin-block-end: 139px;
+  // margin-block-end: 139px;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: bold;
 }
-
+// #sidebar {
+//   display: flex;
+//   margin-left: 700px;
+// }
 .page-inconnue {
   display: block;
   font-size: 36px;
