--- a/kasa/src/views/FicheLogement/FicheLogement.scss
+++ b/kasa/src/views/FicheLogement/FicheLogement.scss
@@ -34,6 +34,8 @@ section {
   .HostGlobal {
     display: flex;
     justify-content: flex-end;
+    margin-top: 50px;
+    margin-right: 20px;
 
     img {
       width: 64px;
@@ -46,7 +48,7 @@ section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 50px 50px 50px;
+    margin: 0px 50px 50px;
   }
   .CollapseHeader {
     width: 582px;
