--- a/kasa/src/components/Tag/Tag.scss
+++ b/kasa/src/components/Tag/Tag.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: flex-start;
   margin-left: 10px;
+  width: 365px;
   //   flex-direction: row;
   //   justify-content: flex-start;
   //   //   background-color: greenyellow;
