redimensionnement des images dans le Slideshow scss

--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 1240px;
   border-radius: 25px;
-  margin: 10px 0 10px 0;
+  margin: 0px 100px;
 
   .overlay {
     position: absolute;
