--- a/kasa/src/views/APropos/APropos.scss
+++ b/kasa/src/views/APropos/APropos.scss
@@ -1,7 +1,7 @@
 .APropos {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   max-width: 1024px;
   margin: 38px auto;
 }
