--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -4,7 +4,7 @@
   align-items: center;
   max-width: 1240px;
   border-radius: 25px;
-  margin: 0px 100px;
+  margin: auto;
 
   .overlay {
     position: absolute;
