--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -16,7 +16,7 @@
 }
 .CollapseContent {
   padding: 10px;
-  // width: 1023px;
+  width: 1023px;
   background-color: #f6f6f6;
   list-style-type: circle;
 }
@@ -24,8 +24,7 @@ h2 {
   font-size: 24px;
   color: white;
 }
-.Arrow {
-  font-size: 30px;
-  color: white;
-  font-weight: bold;
+.Arrow img {
+  width: 24px;
+  height: 14px;
 }
