--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -1,52 +1,21 @@
 .Card {
-  display: flex;
-  flex-direction: column;
-  width: 33%;
-  margin: auto;
-  object-fit: cover;
-  // flex-direction: row;
-  // flex-wrap: wrap;
-  // overflow: hidden;
+  position: relative;
+  height: 340px;
+  margin-right: 20px;
+  width: calc(33.33% - 20px);
+  margin-bottom: 25px;
 }
-// .Card .TitreAppart h3 {
-//   display: flex;
-//   /*flex-direction: row;
-//   flex-wrap: wrap;
-//   /*background-color: #b51717;*/
-//   border-radius: 25px;
-//   /*margin-left: 100px;*/
-//   font-size: 18px;
-//   color: white;
-//   font-weight: bold;
 
-//   /*width: 100%;
-//   height: 829px;*/
-// }
-// .Appart a {
-//   // padding-left: 10px;
-//   text-decoration: none;
-// }
-// .TitreAppart h3 {
-//   margin: 0;
-//   position: relative;
-//   top: -50px;
-//   padding-left: 10px;
-// }
-// .ContainerCard {
-//   width: 340px;
-//   height: 340px;
-//   // background-color: #ff6060;
-//   // background: linear-gradient(180deg, #ff6060, black);
-//   // opacity: 0.8;
-//   border-radius: 10px;
-// }
-// .TitreAppart {
-//   align-items: flex-end;
-//   color: white;
-// }
-// .CardImage {
-//   width: 100%;
-//   height: 340px;
-//   margin: auto;
-//   border-radius: 10px;
-// }
+.CardImage {
+  width: 100%; // La largeur de l'image doit être de 100% du conteneur
+  height: 100%;
+  object-fit: cover;
+}
+h3 {
+  position: absolute;
+  top: 80%; // Centrer verticalement le titre
+  color: white;
+  font-size: 18px;
+  text-align: left;
+  margin-left: 20px;
+}
