--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -15,10 +15,12 @@
   border-radius: 10px;
 }
 .CollapseContent {
-  padding: 10px;
+  padding: 20px 0px 20px 20px;
   width: 1023px;
   background-color: #f6f6f6;
-  list-style-type: circle;
+  color: #ff6060;
+  border-radius: 5px;
+  // list-style-type: circle;
 }
 h2 {
   font-size: 24px;
