--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -10,8 +10,6 @@ header {
     height: 68px;
     width: 210px;
     margin: 45px 100px 45px 100px;
-    /*margin-top: 45px;
-    margin-bottom: 45px;*/
     padding-top: 30px;
     padding-bottom: 30px;
   }
@@ -39,5 +37,12 @@ header {
       text-decoration: none;
       color: #ff6060;
     }
+  }
+}
+@media screen and (max-width: 1440px) {
+  Header.kasa-logo nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
