--- a/kasa/src/components/Slideshow/Slideshow.scss
+++ b/kasa/src/components/Slideshow/Slideshow.scss
@@ -1,32 +1,15 @@
 main {
   max-width: 1240px;
   margin: auto;
+
   .slideshow {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-
-    //margin-left: 100px;
-    // margin-right: 100px;
+    width: 1240px;
+    margin-left: 100px;
   }
-
-  // button {
-  //   position: absolute;
-  //   /* top: 50%; */
-  //   /* left: 40px; */
-  //   width: 47px;
-  //   height: 79px;
-  //   border: none;
-  //   background-color: transparent;
-  //   cursor: pointer;
-  //   font-size: 100px;
-  //   color: greenyellow;
-  //   transform: translateY(-50%);
-  //   // padding: 10px;
-  // }
-
   .prev {
     position: absolute;
     left: 25px;
@@ -54,15 +37,9 @@ main {
       height: 79px;
     }
   }
-  // button:first-child {
-  //   left: 270px;
-  // }
 
-  // button:last-child {
-  //   right: 10px;
-  // }
   img {
-    width: 1240px;
+    width: 100%;
     height: 415px;
     border-radius: 25px;
     object-fit: cover;
