--- a/kasa/src/components/Banner/Banner.scss
+++ b/kasa/src/components/Banner/Banner.scss
@@ -25,3 +25,22 @@
     filter: brightness(70%);
   }
 }
+@media screen and (max-width: 376px) {
+  .banner-image {
+    width: 335px;
+    height: 111px;
+    // background-size: cover;
+    // background-position: right;
+  }
+  .overlay,
+  h1 {
+    font-size: 24px;
+    width: 217px;
+  }
+  h1 {
+    position: absolute;
+    text-align: left;
+    left: -50px;
+    bottom: -50px;
+  }
+}
