--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -2,8 +2,9 @@
   position: relative;
   height: 340px;
   margin-right: 20px;
-  width: calc(33.33% - 20px);
-  margin-bottom: 25px;
+  margin-left: 20px;
+  // width: calc(33.33% - 20px);
+  // margin-bottom: 25px;
 }
 
 .CardImage {
@@ -18,4 +19,9 @@ h3 {
   font-size: 18px;
   text-align: left;
   margin-left: 20px;
+}
+@media screen and (max-width: 376px) {
+  h3 {
+    top: 75%;
+  }
 }
