--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -1,30 +1,45 @@
-header {
+.kasa-header {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
+  /* padding: 15px; */
+  /* width: 100%; */
+  // margin-top: 45px;
+  // margin-bottom: 50px;
+  // margin-left: 100px;
+  // margin-right: 100px;
+  margin: 45px 220px 50px 220px;
   .kasa-logo {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    align-items: center;
-    height: 68px;
-    width: 210px;
-    margin: 45px 100px 45px 100px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    // display: flex;
+    // justify-content: flex-start;
+    // flex-direction: row;
+    // align-items: center;
+    width: auto;
+    height: auto;
+    //modif largeur anciennement width : 210px
+
+    // margin: 45px 100px 45px 100px;
+    // padding-top: 30px;
+    // padding-bottom: 30px;
   }
 
   nav {
     ul {
+      // modifs
       display: flex;
-      justify-content: space-between;
-      padding-right: 40px;
-      padding-top: 70px;
       gap: 57px;
-      font-size: 24px;
-      font-weight: 500;
       list-style-type: none;
-      margin-right: 100px;
+      margin: 0;
+      padding: 0;
+      // display: flex;
+      // justify-content: space-between;
+      // padding-right: 40px;
+      // padding-top: 70px;
+      // gap: 57px;
+      font-size: 24px;
+      // font-weight: 500;
+      // list-style-type: none;
+      // margin-right: 100px;
     }
     li {
       align-items: center;
@@ -39,10 +54,28 @@ header {
     }
   }
 }
-@media screen and (max-width: 1440px) {
-  Header.kasa-logo nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+@media screen and (max-width: 376px) {
+  .kasa-header {
+    flex-direction: column; // Empile les éléments en colonne
+    align-items: center; // Centre les éléments
+    margin: 0; // Supprime les marges latérales
+    padding: 15px;
+  }
+  .kasa-logo {
+    width: 145px;
+    height: 47px;
+    margin-bottom: 15px;
+  }
+  nav {
+    ul {
+      display: flex;
+      flex-direction: row;
+      font-size: 12px;
+      justify-content: center;
+      gap: 15px;
+    }
+    li {
+      align-items: center; // Centre verticalement chaque lien
+    }
   }
 }
