--- a/kasa/src/components/Star/Star.scss
+++ b/kasa/src/components/Star/Star.scss
@@ -1,16 +1,3 @@
-// .hebergements-cards .card-rating {
-//     margin-bottom: 5px;
-//     margin-left: 10px;
-//     color:greenyellow
-//   }
-// .star {
-//   color: filled ("#ff6060": "gray");
-// }
-// .star-global {
-//   display: flex;
-//   flex-direction: column;
-//   width: 196px;
-// }
 .star {
   position: relative;
   left: 1200px;
@@ -26,3 +13,9 @@
   color: #e3e3e3;
   font-size: 36px;
 }
+
+// @media screen and (max-width: 376px) {
+//   .star .star-vide {
+//     left: 20px;
+//   }
+// }
