--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -14,15 +14,22 @@ section.Appart {
   margin-bottom: 25px;
 }
 .Card {
-  //position: relative;
+  display: flex;
+  justify-content: space-around;
   width: 340px;
   height: 340px;
   margin-bottom: 50px;
   margin-top: 50px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 376px) {
   section.Appart {
-    justify-content: center; // Centrez les cartes si la largeur de l'écran est inférieure à 1024px
+    justify-content: center; // Centre les cartes si la largeur de l'écran est inférieure à 1024px
+    background-color: transparent;
+  }
+  .Card {
+    width: 335px;
+    height: 255px;
+    margin: 22px 20px 22px 20px;
   }
 }
