--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -28,3 +28,16 @@
   font-size: 18px;
   color: #ff6060;
 }
+
+@media screen and (max-width: 376px) {
+  .NoMatch {
+    display: block;
+    font-size: 96px;
+  }
+  .page-inconnue {
+    font-size: 18px;
+  }
+  .back-home {
+    font-size: 14px;
+  }
+}
