--- a/kasa/src/components/Header/Header.scss
+++ b/kasa/src/components/Header/Header.scss
@@ -10,10 +10,10 @@
   // margin-right: 100px;
   margin: 45px 100px 50px 100px;
   .kasa-logo {
-    // display: flex;
+    display: flex;
     // justify-content: flex-start;
     // flex-direction: row;
-    // align-items: center;
+    align-items: flex-starts;
     width: 210px;
     height: auto;
     //modif largeur anciennement width : 210px
