--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -30,6 +30,6 @@ section.Appart {
   .Card {
     width: 335px;
     height: 255px;
-    margin: 22px 20px 22px 20px;
+    margin: 22px 0 22px 0;
   }
 }
