--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -1,27 +1,32 @@
-.Card {
-  position: relative;
-  height: 340px;
-  margin-right: 20px;
-  margin-left: 20px;
-  // width: calc(33.33% - 20px);
-  // margin-bottom: 25px;
+.card-link {
+  margin: 0;
+  // width: 33%;
 }
 
-.CardImage {
-  width: 100%; // La largeur de l'image doit être de 100% du conteneur
-  height: 100%;
-  object-fit: cover;
-}
-h3 {
-  position: absolute;
-  top: 80%; // Centrer verticalement le titre
-  color: white;
-  font-size: 18px;
-  text-align: left;
-  margin-left: 20px;
-}
-@media screen and (max-width: 376px) {
+.Card {
+  position: relative;
+  border-radius: 25px;
+  overflow: hidden;
+  width: 100%;
+  height: 340px;
+
+  .CardImage {
+    width: 100%; // La largeur de l'image doit être de 100% du conteneur
+    height: 100%;
+    object-fit: cover;
+    background: linear-gradient(0deg, #eb0a0a, #08ed5c);
+  }
   h3 {
-    top: 75%;
+    position: absolute;
+    top: 80%; // Centrer verticalement le titre
+    color: white;
+    font-size: 18px;
+    text-align: left;
+    margin-left: 20px;
+  }
+  @media screen and (max-width: 376px) {
+    h3 {
+      top: 75%;
+    }
   }
 }
