--- a/kasa/src/components/Collaps/Collaps.scss
+++ b/kasa/src/components/Collaps/Collaps.scss
@@ -1,4 +1,5 @@
 .CollapseItem {
+  max-width: 1023px;
   margin-bottom: 30px;
 }
 
@@ -7,15 +8,15 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  cursor: pointer;
   background-color: #ff6060;
   max-width: 1023px;
   height: 54px;
   border-radius: 10px;
+  cursor: pointer;
 }
 .CollapseContent {
   padding: 20px 0px 20px 20px;
-  width: 1023px;
+  max-width: 1023px;
   background-color: #f6f6f6;
   color: #ff6060;
   border-radius: 5px;
