--- a/kasa/src/index.scss
+++ b/kasa/src/index.scss
@@ -2,9 +2,14 @@
 body {
   font-family: "Montserrat", sans-serif;
 }
-@media screen and (max-width: 375px) {
+.main {
+  max-width: 1440px;
+  margin: auto;
+}
+@media screen and (max-width: 376px) {
   body {
     display: flex;
     justify-content: center;
+    margin: 0;
   }
 }
