Suite maj Desktop + avancement responsive

--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -14,7 +14,7 @@
     width: 100%; // La largeur de l'image doit être de 100% du conteneur
     height: 100%;
     object-fit: cover;
-    background: linear-gradient(0deg, #eb0a0a, #08ed5c);
+    // background: linear-gradient(0deg, #eb0a0a, #08ed5c);
   }
   h3 {
     position: absolute;
