--- a/kasa/src/views/Home/Home.scss
+++ b/kasa/src/views/Home/Home.scss
@@ -18,7 +18,7 @@ section.Appart {
     background-color: transparent;
     // padding-top: 27px;
     // padding: 20px;
-    margin: 0 20px 0 20px;
+    margin: 0;
     gap: 0;
   }
   .Card {
