--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -1,9 +1,10 @@
 .element-no-found {
   color: #ff6060;
   text-align: center;
+  // display: block;
 }
 .NoMatch {
-  display: block;
+  // display: block;
   font-size: 288px;
   margin-block-start: 139px;
   // margin-block-end: 139px;
@@ -11,12 +12,8 @@
   margin-inline-end: 0px;
   font-weight: bold;
 }
-// #sidebar {
-//   display: flex;
-//   margin-left: 700px;
-// }
 .page-inconnue {
-  display: block;
+  // display: block;
   font-size: 36px;
   font-weight: 600px;
   /* margin-block-start: 36px;*/
@@ -30,14 +27,25 @@
 }
 
 @media screen and (max-width: 376px) {
-  .NoMatch {
-    display: block;
-    font-size: 96px;
-  }
-  .page-inconnue {
-    font-size: 18px;
-  }
-  .back-home {
-    font-size: 14px;
+  .element-no-found {
+    display: flex;
+    // padding-top: 20px;
+    flex-direction: column;
+    align-items: center;
+    // gap: 113px;
+
+    .NoMatch {
+      // display: block;
+      font-size: 96px;
+      margin-bottom: 113px;
+    }
+    .page-inconnue {
+      width: 260px;
+      font-size: 18px;
+    }
+    .back-home {
+      font-size: 14px;
+      margin-bottom: 113px;
+    }
   }
 }
