--- a/kasa/src/views/NoMatch/NoMatch.scss
+++ b/kasa/src/views/NoMatch/NoMatch.scss
@@ -36,6 +36,7 @@
 
     .NoMatch {
       // display: block;
+      margin-block-start: 113px;
       font-size: 96px;
       margin-bottom: 113px;
     }
