--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -19,6 +19,9 @@ footer {
   }
 }
 @media screen and (max-width: 376px) {
+  footer {
+    margin-top: 0;
+  }
   footer p {
     font-size: 12px;
     width: 100px;
