--- a/kasa/src/components/Star/Star.scss
+++ b/kasa/src/components/Star/Star.scss
@@ -1,21 +1,31 @@
+.star-global {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 196px;
+  margin-left: 1150px;
+  margin: 0;
+}
 .star {
-  position: relative;
-  left: 1200px;
+  // display: flex;
+  // flex-direction: row;
+  //
+  // left: 1190px;
+  // position: relative;
   bottom: 50px;
   color: #ff6060;
   font-size: 36px;
 }
-
 .star-vide {
-  position: relative;
-  left: 1200px;
+  // position: relative;
+  // left: 1190px;
   bottom: 50px;
   color: #e3e3e3;
   font-size: 36px;
 }
 
-// @media screen and (max-width: 376px) {
-//   .star .star-vide {
-//     left: 20px;
-//   }
-// }
+@media screen and (max-width: 376px) {
+  .star .star-vide {
+    left: 20px;
+  }
+}
