--- a/kasa/src/views/APropos/APropos.scss
+++ b/kasa/src/views/APropos/APropos.scss
@@ -1,9 +1,16 @@
 // ! intégration de APropos ds main
 
 .APropos {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  max-width: 1024px;
+  max-width: 1023px;
   margin: 38px auto;
+}
+@media screen and (max-width: 376px) {
+  .APropos {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    /* height: 180px; */
+    /* justify-content: center; */
+    margin: 20px 20px 19px 20px;
+  }
 }
